# pronlib

./: .gitignore  .pre-commit-config.yaml  Experiments.ipynb  README.md  main.py  pyproject.toml  run_update.command  sauce.json  todo.txt  update_indexes.py
pronlib/: constants.py  folder_index.py  renamer.py  update_files.py  update_meta.py  utils.py
scripts/: list_artists.py
src/: const.py
src/app/: cli.py  const.py  opener.py
src/media_indexing/: folder_index.py
tests/: test_cli.py  test_main.py  test_update.py
tests/test_media/Photos/3 Honoo Haramase Appli/: meta.json
