[tool.poetry]
name = "pronlib-repo"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "pronlib_repo"}]

[tool.poetry.dependencies]
python = "^3.9"
natsort = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
