[tool.ruff]
line-length = 120

[tool.mypy]
strict = true

[tool.poetry]
name = "pronlib-repo"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "pronlib_repo"}]

[tool.poetry.dependencies]
python = "^3.9"
natsort = "^8.2.0"
mypy = "^1.7.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
